# blockchair-downloader

./: .gitignore  LICENSE  README.md  design-spec.md  pyproject.toml
.claude/: settings.local.json
blockchair_downloader/: __init__.py  gui.py
docs/: progress-stepper-design.md
