[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blockchair-downloader"
version = "1.0.0"
authors = [
    {name = "Roman Rinelt"},
]
description = "Modern GUI tool to download Bitcoin blockchain data from Blockchair"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "customtkinter>=5.2.0",
    "darkdetect>=0.8.0",
    "packaging>=23.0",
]

[project.urls]
Homepage = "https://github.com/RomanRnlt/blockchair-downloader"
Repository = "https://github.com/RomanRnlt/blockchair-downloader"
Issues = "https://github.com/RomanRnlt/blockchair-downloader/issues"

[project.scripts]
blockchair-downloader = "blockchair_downloader.gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["blockchair_downloader*"]
